[workspace]
members = ["narwhal-primary", "narwhal-node", "narwhal-storage", "narwhal-crypto", "narwhal-worker", "narwhal-network", "narwhal-config","narwhal-executor"]

[workspace.dependencies]
dashmap = "5.5.3"
anyhow = "1.0.71"
arrow = "52"
arrow-array = "52"
arc-swap = { version = "1.5.1", features = ["serde"] }
assert_cmd = "2.0.6"
async-graphql = "=7.0.1"
async-graphql-axum = "=7.0.1"
async-graphql-value = "=7.0.1"
async-recursion = "1.0.4"
async-trait = "0.1.61"